// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Locale switcher component renders English index switcher correctly 1`] = `
<div>
  <a
    class="sc-hKFxyN kCOJlb"
    href="/"
  >
    <span
      class="sc-bdnxRM sc-gtsrHT eoyzcM corHfP"
    >
      Suomeksi
    </span>
  </a>
  <br />
  ,
</div>
`;

exports[`Locale switcher component renders Finnish index switcher correctly 1`] = `
<div>
  <a
    class="sc-hKFxyN kCOJlb"
    href="/en"
  >
    <span
      class="sc-bdnxRM sc-gtsrHT eoyzcM corHfP"
    >
      In English
    </span>
  </a>
  <br />
  ,
</div>
`;
